--- a/streamServiceViewerStyles.css
+++ b/streamServiceViewerStyles.css
@@ -21,8 +21,6 @@ body {
 	width: 100%;
 	margin: 0;
 	padding: 0;
-	font-family: sans-serif;
-	font-size: 12px;
 }
 
 body {
@@ -40,8 +38,9 @@ body {
 .basemapGallery-container {
 	position: absolute;
 	top: 20px;
-	left: 70px;
+	left: 60px;
 	z-index: 50;
+	opacity: 0.7;
 }
 
 .dijitTitlePaneTitle {
@@ -180,69 +179,11 @@ section:first-of-type .config-header {
 }
 
 .input-group {
-	display: flex;
-	flex-direction: column;
-	text-align: center;
-	justify-content: center;
 	margin: 5px 0;
 }
 
 .input-group-full {
 	width: 100%;
-	flex-direction: row-reverse;
-	text-align: left;
-}
-
-.input-group-full ~ .input-row {
-	width: calc(100% - 80px);
-	margin-left: 80px;
-}
-
-.input-group-full .input-group-nested {
-	display: flex;
-	flex-direction: column-reverse;
-	text-align: center;
-	width: calc(100% - 80px) !important;
-}
-
-.input-group-full .input-group-nested input {
-	width: 80% !important;
-}
-
-.input-group-full input {
-	/*width: calc(100% - 85px) !important;*/
-	width: 100% !important;
-}
-
-.input-row {
-	display: flex;
-	/*flex-wrap: wrap;*/
-	justify-content: space-between;
-	align-items: center;
-	width: 100%;
-	margin: 5px 0;
-}
-
-.input-row .input-group {
-	width: 33%;
-}
-
-.input-row-header-labeled {
-	margin-left: 90px;
-	justify-content: space-around;
-}
-
-.input-row-header {
-	margin: 2px 0;
-}
-
-.input-row-header input {
-	flex: 1 0 auto;
-	margin: 1px 2px;
-}
-
-.input-row-header input[type='checkbox'] {
-	flex: 0 0 auto;
 }
 
 .flat .dijitDropDownButton .dijitButtonNode {
